feat: add encryption logic
