# internal/generated/api/v1/message.pb.go
@@ -270,8 +270,11 @@ type UserProfile struct {
 	StudentLoanAccounts []*StudentLoanAccount `protobuf:"bytes,7,rep,name=student_loan_accounts,json=studentLoanAccounts,proto3" json:"student_loan_accounts,omitempty"`
 	// the user plaid access token
 	PlaidAccessToken string `protobuf:"bytes,8,opt,name=plaid_access_token,json=plaidAccessToken,proto3" json:"plaid_access_token,omitempty"`
+	// key used to encrypt the access token by the kms
+	DecryptionAccessTokenKey     string `protobuf:"bytes,9,opt,name=decryption_access_token_key,json=decryptionAccessTokenKey,proto3" json:"decryption_access_token_key,omitempty"`
+	DecryptionAccessTokenVersion string `protobuf:"bytes,10,opt,name=decryption_access_token_version,json=decryptionAccessTokenVersion,proto3" json:"decryption_access_token_version,omitempty"`
 	// the customer id tied to the stripe account
-	StripeCustomerId string `protobuf:"bytes,9,opt,name=stripe_customer_id,json=stripeCustomerId,proto3" json:"stripe_customer_id,omitempty"`
+	StripeCustomerId string `protobuf:"bytes,11,opt,name=stripe_customer_id,json=stripeCustomerId,proto3" json:"stripe_customer_id,omitempty"`
 }
 
 func (x *UserProfile) Reset() {
@@ -358,6 +361,20 @@ func (x *UserProfile) GetStudentLoanAccounts() []*StudentLoanAccount {
 func (x *UserProfile) GetPlaidAccessToken() string {
 	if x != nil {
 		return x.PlaidAccessToken
+	}
+	return ""
+}
+
+func (x *UserProfile) GetDecryptionAccessTokenKey() string {
+	if x != nil {
+		return x.DecryptionAccessTokenKey
+	}
+	return ""
+}
+
+func (x *UserProfile) GetDecryptionAccessTokenVersion() string {
+	if x != nil {
+		return x.DecryptionAccessTokenVersion
 	}
 	return ""
 }
@@ -2507,7 +2524,7 @@ var file_api_v1_message_proto_rawDesc = []byte{
 	0x32, 0x2f, 0x6f, 0x70, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74, 0x61,
 	0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x1f, 0x67, 0x6f, 0x6f,
 	0x67, 0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x66, 0x69, 0x65, 0x6c, 0x64, 0x5f, 0x62, 0x65,
-	0x68, 0x61, 0x76, 0x69, 0x6f, 0x72, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0xc3, 0x04, 0x0a,
+	0x68, 0x61, 0x76, 0x69, 0x6f, 0x72, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0xd3, 0x05, 0x0a,
 	0x0b, 0x55, 0x73, 0x65, 0x72, 0x50, 0x72, 0x6f, 0x66, 0x69, 0x6c, 0x65, 0x12, 0x13, 0x0a, 0x02,
 	0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x42, 0x03, 0x92, 0x41, 0x00, 0x52, 0x02, 0x69,
 	0x64, 0x12, 0x23, 0x0a, 0x07, 0x75, 0x73, 0x65, 0x72, 0x5f, 0x69, 0x64, 0x18, 0x02, 0x20, 0x01,
@@ -2540,8 +2557,17 @@ var file_api_v1_message_proto_rawDesc = []byte{
 	0x75, 0x6e, 0x74, 0x73, 0x12, 0x31, 0x0a, 0x12, 0x70, 0x6c, 0x61, 0x69, 0x64, 0x5f, 0x61, 0x63,
 	0x63, 0x65, 0x73, 0x73, 0x5f, 0x74, 0x6f, 0x6b, 0x65, 0x6e, 0x18, 0x08, 0x20, 0x01, 0x28, 0x09,
 	0x42, 0x03, 0x92, 0x41, 0x00, 0x52, 0x10, 0x70, 0x6c, 0x61, 0x69, 0x64, 0x41, 0x63, 0x63, 0x65,
-	0x73, 0x73, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x12, 0x31, 0x0a, 0x12, 0x73, 0x74, 0x72, 0x69, 0x70,
-	0x65, 0x5f, 0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x5f, 0x69, 0x64, 0x18, 0x09, 0x20,
+	0x73, 0x73, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x12, 0x42, 0x0a, 0x1b, 0x64, 0x65, 0x63, 0x72, 0x79,
+	0x70, 0x74, 0x69, 0x6f, 0x6e, 0x5f, 0x61, 0x63, 0x63, 0x65, 0x73, 0x73, 0x5f, 0x74, 0x6f, 0x6b,
+	0x65, 0x6e, 0x5f, 0x6b, 0x65, 0x79, 0x18, 0x09, 0x20, 0x01, 0x28, 0x09, 0x42, 0x03, 0x92, 0x41,
+	0x00, 0x52, 0x18, 0x64, 0x65, 0x63, 0x72, 0x79, 0x70, 0x74, 0x69, 0x6f, 0x6e, 0x41, 0x63, 0x63,
+	0x65, 0x73, 0x73, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x4b, 0x65, 0x79, 0x12, 0x4a, 0x0a, 0x1f, 0x64,
+	0x65, 0x63, 0x72, 0x79, 0x70, 0x74, 0x69, 0x6f, 0x6e, 0x5f, 0x61, 0x63, 0x63, 0x65, 0x73, 0x73,
+	0x5f, 0x74, 0x6f, 0x6b, 0x65, 0x6e, 0x5f, 0x76, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x18, 0x0a,
+	0x20, 0x01, 0x28, 0x09, 0x42, 0x03, 0x92, 0x41, 0x00, 0x52, 0x1c, 0x64, 0x65, 0x63, 0x72, 0x79,
+	0x70, 0x74, 0x69, 0x6f, 0x6e, 0x41, 0x63, 0x63, 0x65, 0x73, 0x73, 0x54, 0x6f, 0x6b, 0x65, 0x6e,
+	0x56, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x12, 0x31, 0x0a, 0x12, 0x73, 0x74, 0x72, 0x69, 0x70,
+	0x65, 0x5f, 0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x5f, 0x69, 0x64, 0x18, 0x0b, 0x20,
 	0x01, 0x28, 0x09, 0x42, 0x03, 0x92, 0x41, 0x00, 0x52, 0x10, 0x73, 0x74, 0x72, 0x69, 0x70, 0x65,
 	0x43, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x49, 0x64, 0x3a, 0x06, 0xba, 0xb9, 0x19, 0x02,
 	0x08, 0x01, 0x22, 0xe9, 0x0e, 0x0a, 0x12, 0x53, 0x74, 0x75, 0x64, 0x65, 0x6e, 0x74, 0x4c, 0x6f,
