# internal/generated/api/v1/message.pb.gorm.go
@@ -12,15 +12,17 @@ import (
 )
 
 type UserProfileORM struct {
-	BankAccounts        []*BankAccountORM   `gorm:"foreignkey:UserProfileId;association_foreignkey:Id;preload:true"`
-	CreditAccounts      []*CreditAccountORM `gorm:"foreignkey:UserProfileId;association_foreignkey:Id;preload:true"`
-	Id                  uint64
-	InvestmentAccounts  []*InvestmentAccountORM `gorm:"foreignkey:UserProfileId;association_foreignkey:Id;preload:true"`
-	MortgageAccounts    []*MortgageAccountORM   `gorm:"foreignkey:UserProfileId;association_foreignkey:Id;preload:true"`
-	PlaidAccessToken    string
-	StripeCustomerId    string
-	StudentLoanAccounts []*StudentLoanAccountORM `gorm:"foreignkey:UserProfileId;association_foreignkey:Id;preload:true"`
-	UserId              uint64
+	BankAccounts                 []*BankAccountORM   `gorm:"foreignkey:UserProfileId;association_foreignkey:Id;preload:true"`
+	CreditAccounts               []*CreditAccountORM `gorm:"foreignkey:UserProfileId;association_foreignkey:Id;preload:true"`
+	DecryptionAccessTokenKey     string
+	DecryptionAccessTokenVersion string
+	Id                           uint64
+	InvestmentAccounts           []*InvestmentAccountORM `gorm:"foreignkey:UserProfileId;association_foreignkey:Id;preload:true"`
+	MortgageAccounts             []*MortgageAccountORM   `gorm:"foreignkey:UserProfileId;association_foreignkey:Id;preload:true"`
+	PlaidAccessToken             string
+	StripeCustomerId             string
+	StudentLoanAccounts          []*StudentLoanAccountORM `gorm:"foreignkey:UserProfileId;association_foreignkey:Id;preload:true"`
+	UserId                       uint64
 }
 
 // TableName overrides the default tablename generated by GORM
@@ -96,6 +98,8 @@ func (m *UserProfile) ToORM(ctx context.Context) (UserProfileORM, error) {
 		}
 	}
 	to.PlaidAccessToken = m.PlaidAccessToken
+	to.DecryptionAccessTokenKey = m.DecryptionAccessTokenKey
+	to.DecryptionAccessTokenVersion = m.DecryptionAccessTokenVersion
 	to.StripeCustomerId = m.StripeCustomerId
 	if posthook, ok := interface{}(m).(UserProfileWithAfterToORM); ok {
 		err = posthook.AfterToORM(ctx, &to)
@@ -171,6 +175,8 @@ func (m *UserProfileORM) ToPB(ctx context.Context) (UserProfile, error) {
 		}
 	}
 	to.PlaidAccessToken = m.PlaidAccessToken
+	to.DecryptionAccessTokenKey = m.DecryptionAccessTokenKey
+	to.DecryptionAccessTokenVersion = m.DecryptionAccessTokenVersion
 	to.StripeCustomerId = m.StripeCustomerId
 	if posthook, ok := interface{}(m).(UserProfileWithAfterToPB); ok {
 		err = posthook.AfterToPB(ctx, &to)
@@ -2166,6 +2172,14 @@ func DefaultApplyFieldMaskUserProfile(ctx context.Context, patchee *UserProfile,
 		}
 		if f == prefix+"PlaidAccessToken" {
 			patchee.PlaidAccessToken = patcher.PlaidAccessToken
+			continue
+		}
+		if f == prefix+"DecryptionAccessTokenKey" {
+			patchee.DecryptionAccessTokenKey = patcher.DecryptionAccessTokenKey
+			continue
+		}
+		if f == prefix+"DecryptionAccessTokenVersion" {
+			patchee.DecryptionAccessTokenVersion = patcher.DecryptionAccessTokenVersion
 			continue
 		}
 		if f == prefix+"StripeCustomerId" {
